# CustomizableCalculator

./: README.md  pyproject.toml
_server/_server/: settings.py
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_student_is_verified_student_student_code.py
_server/core/templates/core/: index.html
_server/registration/: urls.py  views.py
_server/registration/templates/registration/: base.html  instructor_sign_in.html  instructor_sign_up.html  instructor_verification.html  student_sign_in.html  student_sign_up.html  student_verification.html
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Calculator.jsx  Course.jsx  DeletePopup.jsx  Function.jsx  FunctionButton.jsx  FunctionCheckbox.jsx
client/src/hooks/: getCookie.js  useCourse.js  useCourses.js  useFetch.js  useFunctions.js
client/src/pages/: AddCourse.jsx  Courses.jsx  EditCourse.jsx  StudentCalculator.jsx
